--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -42,7 +42,7 @@
       @media only screen and (max-width: 1024px) {
         height: 480px;
       }
-      background: url("/assets/woman.jpg");
+      background: url("./../assets/woman.jpg");
       background-color: rgba(0, 0, 0, 0.45);
       border-radius: $br-big;
       background-blend-mode: overlay;
