--- a/styles/style.css
+++ b/styles/style.css
@@ -946,7 +946,7 @@ body p {
 .cards-section .cards-container .card {
   padding: 24px;
   height: 400px;
-  background: url("/assets/woman.jpg");
+  background: url("./../assets/woman.jpg");
   background-color: rgba(0, 0, 0, 0.45);
   border-radius: 12px;
   background-blend-mode: overlay;
