--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,12 +1,14 @@
 $white: #fff;
-$medium-white: #eeeeee;
+$medium-white: #e2e2e2;
 
 $black: #000;
 $medium-black: #444;
 $light-black: #444;
 
 $blue: #3e88e9;
+$blue-dark: #3777ca;
 $orange: #ff6b00;
+$orange-dark: #ee6300;
 
 $greyish-blue: #b6c7d9;
 
